fix: color contrast fixes for Sidebar and Wizard header

--- a/plugins/plugin-carbon-themes/web/scss/carbon-gray10.scss
+++ b/plugins/plugin-carbon-themes/web/scss/carbon-gray10.scss
@@ -19,6 +19,7 @@
 @import 'charts';
 @import 'colors';
 @import 'inverted';
+@import '@kui-shell/plugin-client-common/web/scss/components/Wizard/mixins';
 @import '@kui-shell/plugin-client-common/web/scss/components/Sidecar/mixins';
 @import '@kui-shell/plugin-client-common/web/scss/components/StatusStripe/mixins';
 
@@ -37,6 +38,9 @@ body[kui-theme='Carbon Gray10'] {
   @include CommentaryEditor {
     @include carbon-inverted;
     --color-sidecar-background-02: var(--color-base00);
+  }
+  @include WizardHeader {
+    @include carbon-inverted;
   }
 
   .monaco-editor .margin-view-overlays .current-line-margin,
